[gd_scene load_steps=4 format=3 uid="uid://cnwgatlhq1wku"]

[ext_resource type="Script" path="res://Scenes/vote_screen.gd" id="1_dmc44"]
[ext_resource type="Texture2D" uid="uid://b5jnbgh8qrach" path="res://Sprites/BackgroundImages/GGJ 2024 - Vote Screen_new.jpg" id="1_pgak8"]
[ext_resource type="PackedScene" uid="uid://b8j586ho4bfhf" path="res://Nodes/cloud_collider.tscn" id="2_lr8wl"]

[node name="VoteScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_dmc44")

[node name="Ggj2024-VoteScreenNew" type="Sprite2D" parent="."]
position = Vector2(576, 324)
scale = Vector2(0.864216, 0.865154)
texture = ExtResource("1_pgak8")

[node name="cloud_collider_left" parent="." instance=ExtResource("2_lr8wl")]
position = Vector2(221, 616)

[node name="cloud_collider_middle" parent="." instance=ExtResource("2_lr8wl")]
position = Vector2(576, 615)

[node name="cloud_collider_right" parent="." instance=ExtResource("2_lr8wl")]
position = Vector2(931, 616)

[connection signal="clicked" from="cloud_collider_left" to="." method="_on_cloud_collider_left_clicked"]
[connection signal="clicked" from="cloud_collider_middle" to="." method="_on_cloud_collider_middle_clicked"]
[connection signal="clicked" from="cloud_collider_right" to="." method="_on_cloud_collider_right_clicked"]
